--- a/Module1/Mentoring.Core.Module1/Views/Category/Index.cshtml
+++ b/Module1/Mentoring.Core.Module1/Views/Category/Index.cshtml
@@ -1,20 +1,20 @@
 ﻿@using Mentoring.Core.Module1.Models
 @model IEnumerable<Category>
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Categories</title>
-</head>
-<body>
-    <h2>Categories we have:</h2>
-    <ol>
-        @foreach(var item in Model)
-        {
-            <li>@item.CategoryName</li>
-        }
-    </ol>
-</body>
-</html>
+<h2>Categories we have:</h2>
+<table class="table">
+    <tr>
+        <th scope="col">№</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.CategoryId</td>
+            <td>@item.CategoryName</td>
+            <td>@item.Description</td>
+        </tr>
+    }
+</table>
