--- a/Module1/Mentoring.Core.Module1/Views/Product/Edit.cshtml
+++ b/Module1/Mentoring.Core.Module1/Views/Product/Edit.cshtml
@@ -2,61 +2,54 @@
 @model Product
 
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-    <h2>Edit product: @Model.ProductName</h2>
-    <form method="post">
-        <div>
-            <label asp-for="ProductName"></label>
-            <input asp-for="ProductName" />
-            <span asp-validation-for="ProductName"></span>
-        </div>
-        <div>
-            <label asp-for="CategoryId"></label>
-            <select asp-for="CategoryId" asp-items="@(new SelectList(ViewData["Categories"] as IEnumerable<Category>, "CategoryId", "CategoryName"))"></select>
-            <span asp-validation-for="CategoryId"></span>
-        </div>
-        <div>
-            <label asp-for="SupplierId"></label>
-            <select asp-for="SupplierId" asp-items="@(new SelectList(ViewData["Suppliers"] as IEnumerable<Supplier>, "SupplierId", "CompanyName"))"></select>
-            <span asp-validation-for="SupplierId"></span>
-        </div>
-        <div>
-            <label asp-for="QuantityPerUnit"></label>
-            <input asp-for="QuantityPerUnit" />
-            <span asp-validation-for="QuantityPerUnit"></span>
-        </div>
-        <div>
-            <label asp-for="ReorderLevel"></label>
-            <input asp-for="ReorderLevel" />
-            <span asp-validation-for="ReorderLevel"></span>
-        </div>
-        <div>
-            <label asp-for="UnitPrice"></label>
-            <input asp-for="UnitPrice" />
-            <span asp-validation-for="UnitPrice"></span>
-        </div>
-        <div>
-            <label asp-for="UnitsInStock"></label>
-            <input asp-for="UnitsInStock" />
-            <span asp-validation-for="UnitsInStock"></span>
-        </div>
-        <div>
-            <label asp-for="UnitsOnOrder"></label>
-            <input asp-for="UnitsOnOrder" />
-            <span asp-validation-for="UnitsOnOrder"></span>
-        </div>
-        <div>
-            <label asp-for="Discontinued"></label>
-            <input asp-for="Discontinued" />
-            <span asp-validation-for="Discontinued"></span>
-        </div>
-        <input type="hidden" asp-for="ProductId"/>
-        <input type="submit" name="save" value="Save" />
-    </form>
-</body>
-</html>
+
+<h2>Edit product: @Model.ProductName</h2>
+<form method="post">
+    <div class="form-group">
+        <label asp-for="ProductName"></label>
+        <input asp-for="ProductName" />
+        <span asp-validation-for="ProductName"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="CategoryId"></label>
+        <select asp-for="CategoryId" asp-items="@(new SelectList(ViewData["Categories"] as IEnumerable<Category>, "CategoryId", "CategoryName"))"></select>
+        <span asp-validation-for="CategoryId"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="SupplierId"></label>
+        <select asp-for="SupplierId" asp-items="@(new SelectList(ViewData["Suppliers"] as IEnumerable<Supplier>, "SupplierId", "CompanyName"))"></select>
+        <span asp-validation-for="SupplierId"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="QuantityPerUnit"></label>
+        <input asp-for="QuantityPerUnit" />
+        <span asp-validation-for="QuantityPerUnit"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ReorderLevel"></label>
+        <input asp-for="ReorderLevel" />
+        <span asp-validation-for="ReorderLevel"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="UnitPrice"></label>
+        <input asp-for="UnitPrice" />
+        <span asp-validation-for="UnitPrice"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="UnitsInStock"></label>
+        <input asp-for="UnitsInStock" />
+        <span asp-validation-for="UnitsInStock"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="UnitsOnOrder"></label>
+        <input asp-for="UnitsOnOrder" />
+        <span asp-validation-for="UnitsOnOrder"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Discontinued"></label>
+        <input asp-for="Discontinued" />
+        <span asp-validation-for="Discontinued"></span>
+    </div>
+    <input type="hidden" asp-for="ProductId"/>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
