--- a/Module1/Mentoring.Core.Module1/Views/Product/Index.cshtml
+++ b/Module1/Mentoring.Core.Module1/Views/Product/Index.cshtml
@@ -1,24 +1,18 @@
 ﻿@using Mentoring.Core.Module1.Models
 @model IEnumerable<Product>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Products</title>
-</head>
-<body>
     <h2>Products we have</h2>
-    <table>
+    
+    <table class="table">
         <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>QuantityPerUnit</th>
-            <th>UnitPrice</th>
-            <th>UnitsInStock</th>
-            <th>UnitsOnOrder</th>
-            <th>ReorderLevel</th>
+            <th scope="col">№</th>
+            <th scope="col">Name</th>
+            <th scope="col">Unit desc.</th>
+            <th scope="col">Price</th>
+            <th scope="col">In stock</th>
+            <th scope="col">On order</th>
+            <th scope="col">Reorder lvl.</th>
+            <th scope="col">Discontinued</th>
         </tr>
         @foreach(var item in Model)
         {
@@ -26,17 +20,15 @@
                 <td>@item.ProductId</td>
                 <td>@item.ProductName</td>
                 <td>@item.QuantityPerUnit</td>
-                <td>@item.UnitPrice</td>
+                <td>@string.Format("{0:0.00}", item.UnitPrice ?? 0)</td>
                 <td>@item.UnitsInStock</td>
                 <td>@item.UnitsOnOrder</td>
                 <td>@item.ReorderLevel</td>
-                <td><a asp-action="Edit" asp-route-id="@item.ProductId" >Edit</a></td>
+                <td>
+                    <span class="glyphicon @(item.Discontinued ? "glyphicon-ok" : "glyphicon-remove") "></span>
+                </td>
+                <td><a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.ProductId" >Edit</a></td>
             </tr>
         }
     </table>
 
-    <div>
-        <a asp-action="Create">Create new product</a>
-    </div>
-</body>
-</html>
