Repositories implemented. ViewModels created and applied to controllers. Methods re-implemented to be async

--- a/Module1/Mentoring.Core.Module1/Views/Category/Index.cshtml
+++ b/Module1/Mentoring.Core.Module1/Views/Category/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Mentoring.Core.Module1.Models
-@model IEnumerable<Category>
+@model IEnumerable<CategoryViewModel>
 
 
 <h2>Categories we have:</h2>
