--- a/Module1/Mentoring.Core.Module1/Views/Shared/_Layout.cshtml
+++ b/Module1/Mentoring.Core.Module1/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Products
+                        Product
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" asp-controller="Product" asp-action="Index">Products list </a>
+                        <a class="dropdown-item" asp-controller="Product" asp-action="Index">Product list </a>
                         <a class="dropdown-item" asp-controller="Product" asp-action="Create">Create new</a>
                     </div>
                 </li>
